Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11668

SetupDiDestroyClassImageList is unimplemented and doesn't free resources

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.3
    • None

    Description

      The function does nothing, though functions creating the lists are implemented, which probably creates a memory leak.
      (I cannot find what called the function though. Apparently it wasn't called by the process that was running when the message appeared, and then log was lost.)

      Attachments

        Activity

          People

            bug zilla Bug Zilla
            CircularTriangle06 CircularTriangle06
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: