[SETUPAPI] Implement freeing memory in SetupDiDestroyClassImageList function. Based on patch from CircularTriangle06. Thanks! See CORE-11668

svn path=/trunk/; revision=72777